1. 修正進階搜尋診斷碼 bug。 2. 新增申報檔匯完後連動AI智能提示。